--- a/src/Pages/Sobre/Sobre.module.css
+++ b/src/Pages/Sobre/Sobre.module.css
@@ -14,10 +14,11 @@ body{
     gap: 10px;
     flex-wrap: wrap;
     justify-content: center;
+    padding: 0;
 }
 
 .listaIcones img{
-    width: 150px;
+    width: 120px;
     margin-top: 1rem;
 }
 
@@ -28,19 +29,23 @@ body{
 
 
 .container{
-    margin-top: 5rem;
-    
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+    gap: 15px;    
 }
 .sobreMimContainer{
+    text-align: center;
+    position: relative;
+    width: 50%;
     margin-top: 1rem;
-    display: flex;
-    align-items: center;
-    gap: 12px;
-    flex-direction: column;
+
 }
 .imgPerfilSobre{
-    width: 400px;
-    border-radius: 150px
+    width: 350px;
+    border-radius: 150px;
 
     
 }
@@ -50,18 +55,20 @@ body{
     
     
     .listaIcones img{
-        width: 120px;
+        width: 80px;
     }
 
     .listaIcones img:hover{ 
       width: 120px;  
     }
 
-
-
-    .imgPerfilSobre{
-        width: 300px;
+    .sobreMimContainer{
+        width: auto;
+        padding: 1rem;
     }
+
+
+   
 
     .container{
         text-align: center;
