--- a/src/Components/Nav/NavBar.module.css
+++ b/src/Components/Nav/NavBar.module.css
@@ -1,5 +1,5 @@
 .navLink{
-    text-decoration: none;
+    text-decoration: underline;
     color:#d9d9d9;
     padding: 1rem;
     font-size: 18px;
